applied fix to drop shadow and z-index issue

--- a/Website/wwwroot/src/components/header.scss
+++ b/Website/wwwroot/src/components/header.scss
@@ -2,6 +2,17 @@
 
 .header-container {
   position: relative;
+  .drop-shadow {
+    height: 20px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    z-index: 4; 
+    -webkit-box-shadow: 0 4px 19px 0 rgba(0, 0, 0, 0.09);
+    -moz-box-shadow: 0 4px 19px 0 rgba(0, 0, 0, 0.09);
+    box-shadow: 0 4px 19px 0 rgba(0, 0, 0, 0.09);
+  }
 }
 
 
@@ -10,10 +21,7 @@
   padding-top: 36px;
   padding-bottom: 36px;
   background-color: #ffcb28;
-  -webkit-box-shadow: 0 4px 19px 0 rgba(0, 0, 0, 0.09);
-  -moz-box-shadow: 0 4px 19px 0 rgba(0, 0, 0, 0.09);
-  box-shadow: 0 4px 19px 0 rgba(0, 0, 0, 0.09);
-  z-index: 5;
+  z-index: 21;
 
   .header-logo {
     width: 150px;
@@ -84,6 +92,7 @@
       -ms-transition: all 0.2s cubic-bezier(0.24, 0.35, 0, 1.01);
       -o-transition: all 0.2s cubic-bezier(0.24, 0.35, 0, 1.01);
       transition: all 0.2s cubic-bezier(0.24, 0.35, 0, 1.01);
+      z-index: 21;
     }
 
     .sub-menu-inner {
